# word-spacer

./: README.md  pyproject.toml
app/: config.py  game.py  helpers.py  main.py  routes.py  typesetting.py
app/static/css/: main.css
app/static/words/: cities.yaml  colors.yaml  elements.yaml  flowers.yaml
app/templates/: index.html  word.html
app/templates/shared/: _base.html  _header.html
shell/: dev.sh  styles.sh
