[tool.poetry]
name = "word-spacer"
version = "0.1.0"
description = ""
authors = ["Roberto Arista <arista.rob@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
fastapi-cli = "^0.0.4"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
jinja2-fragments = "^1.5.0"
pydantic-settings = "^2.3.4"
arel = "^0.3.0"
pytailwindcss = "^0.2.0"
htmlmin = "^0.1.12"
fonttools = "^4.53.1"
uharfbuzz = "^0.39.3"
drawbot-skia = "^0.5.1"
icecream = "^2.1.3"
ufo2svg = {git = "https://github.com/typesupply/ufo2svg"}
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
